--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "oldStart": "react-scripts start",
+    "ping": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
